# msptools

./: .gitignore  .readthedocs.yaml  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
docs/source/: API.rst  conf.py  index.rst  installation.rst  usage.rst
examples/: Drude_sphere_polarizability.py  create_particles.py  gold_permittivity.py  pair_optical_forces.py
src/msptools/: GreenTensor_Electric.py  MSP.py  OFO_calculations.py  __init__.py  dipole_moments.py  field_mod.py  particle_types.py  particles_mod.py  permittivity.py  polarizability_mod.py  ridx_usage.py  unit_calcs.py
src/msptools/tools/: field_tools.py  ridx_usage.py  unit_calcs.py
test/: first_test.ipynb  test_Green_Tensor_Electric.py  test_MSP.py  test_OFOcalc.py  test_dipole_moments.py  test_field.py  test_field_tools.py  test_msptools.py  test_particles_mod.py  test_permittivity.py  test_polarizability_mod.py  test_types.py  test_units.py
