[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msptools"
version = "0.1.0"
description = "Tools for Optical Forces Calcultation in Multiple Scattering Problems"
authors = [
    { name = "Joan ronquillo"}
]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}

